@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.pyrrent2http" name="pyrrent2http" version="0.8.2" provider-name="inpos">
+<addon id="script.module.pyrrent2http" name="pyrrent2http" version="0.8.3" provider-name="inpos">
     <requires>
         <import addon="xbmc.python" version="2.14.0"/>
         <import	addon="script.module.libtorrent" />
