@@ -1,2 +1,5 @@
+[B]Version 0.8.3[/B]
++ Исправил быстрый запуск (fix fast resume)
+
 [B]Version 0.5.0[/B]
 + Initial release
